CMAKE_MINIMUM_REQUIRED( VERSION 2.6 )

PROJECT( Blog )

FILE( GLOB LUA_SOURCE Lua/*.c )
FILE( GLOB POST_SOURCE 2010.04.20/*.cpp )
FILE( GLOB LUA_SCRIPTS 2010.04.20/*.lua )
FILE( GLOB POST_TEXT 2010.04.20/Article.txt )

SOURCE_GROUP( "Lua" FILES ${LUA_SOURCE} )
SOURCE_GROUP( "Post" FILES ${POST_SOURCE} )
SOURCE_GROUP( "Scripts" FILES ${LUA_SCRIPTS} )
SOURCE_GROUP( "Text" FILES ${POST_TEXT} )

INCLUDE_DIRECTORIES( Lua Glew/include )

IF( WIN32 )
	ADD_DEFINITIONS( -DGLEW_STATIC )
ENDIF()

ADD_EXECUTABLE( Blog
    ${LUA_SOURCE}
    ${POST_SOURCE}
    ${LUA_SCRIPTS}
)
