CMAKE_MINIMUM_REQUIRED( VERSION 2.6 )

PROJECT( Trefoil )

FILE( GLOB CPP_SOURCE *.hpp *.cpp )
FILE( GLOB C_SOURCE lib/*.h lib/*.c )
FILE( GLOB SHADERS *.glsl )

IF( WIN32 )

    SOURCE_GROUP( "lib" FILES ${C_SOURCE} )
    ADD_DEFINITIONS( -DGLEW_STATIC )
    SET( PLATFORM_LIBS opengl32 )
    SET( CONSOLE_SYSTEM WIN32 )
    
ELSEIF( APPLE )

    LINK_DIRECTORIES( /usr/X11R6/lib )
    SET( PLATFORM_LIBS X11 GL )

ELSEIF( UNIX )

    SET( PLATFORM_LIBS X11 GL )

ENDIF()

INCLUDE_DIRECTORIES( lib ${PROJECT_BINARY_DIR} )

ADD_EXECUTABLE( Trefoil
    ${CONSOLE_SYSTEM}
    ${CPP_SOURCE}
    ${C_SOURCE}
    ${SHADERS}
    Platform.hpp
)

TARGET_LINK_LIBRARIES( Trefoil ${PLATFORM_LIBS} )